# zephyr-flight-software

./: README.md
app/a3gTest/: CMakeLists.txt  prj.conf
app/a3gTest/mylib/: Makefile
app/a3gTest/mylib/include/: a3g4250d.h
app/a3gTest/src/: main.c
app/cubestack/src/: main.c
app/ms5607test/: CMakeLists.txt  prj.conf
app/ms5607test/ms56xx/: Makefile
app/ms5607test/ms56xx/include/: ms56xx.h
app/ms5607test/ms56xx/src/: ms56xx.c
app/ms5607test/src/: main.c
cubestack/: CMakeLists.txt
cubestack/src/: main.c
lib/sensor/include/: a3g4250d.h  ms56xx.h
lib/sensor/src/: a3g4250d.c  ms56xx.c
